# cclaw

./: .gitignore  CLAUDE.md  MVP-PLAN.md  README.ko.md  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
abysscope/: package-lock.json  package.json
abysscope/src/app/: globals.css  layout.tsx  page.tsx
abysscope/src/app/chat/: page.tsx
abysscope/src/app/logs/: page.tsx
abysscope/src/app/settings/: page.tsx
abysscope/src/app/skills/: page.tsx
abysscope/src/components/: bot-avatar.tsx  conversation-heatmap.tsx  cron-editor.tsx  live-status.tsx  memory-editor.tsx  path-link.tsx  search-panel.tsx  session-list.tsx  settings-editor.tsx  sidebar.tsx  skill-card.tsx  status-badge.tsx  tool-latency-panel.tsx
abysscope/src/components/__tests__/: ui-regression.test.ts
abysscope/src/components/chat/: bot-selector.tsx  chat-message.tsx  chat-session-list.tsx  chat-view.tsx  prompt-input.tsx  voice-mode.tsx  (+2 more)
abysscope/src/hooks/: use-voice-pipeline.ts
abysscope/src/lib/: abyss-api.ts  abyss.ts  conversation-search.ts  sentence-chunker.ts  voice-rms.ts  voicebox.ts
abysscope/src/types/: node-sqlite.d.ts
clawhouse/: package-lock.json  package.json  vitest.config.ts
clawhouse/src/app/: layout.tsx  page.tsx
clawhouse/src/components/: cron-editor.tsx  memory-editor.tsx  settings-editor.tsx  sidebar.tsx  theme-toggle.tsx
clawhouse/src/lib/: cclaw.ts
docs/: ARCHITECTURE.md  IMESSAGE-SKILL.md  MINIMAX_SETUP.md  OPENROUTER_SETUP.md  PLAN-26-0305.md  PLAN-26-0311-ABYSSCOPE.md  PLAN-26-0311-CLAWHOUSE.md  PLAN-26-0313-GROUP-MISSION.md  PLAN-26-0316-PYTHON-AGENT-SDK.md  PLAN-26-0324-EVENT-DRIVEN-PROACTIVE-BOT.md  SECURITY.md  TECHNICAL-NOTES.md  TODO.md  plan-channel-adapter-2026-04-25.md  plan-chat-attachments-2026-05-03.md  plan-claude-code-changelog-adoption-2026-04-29.md  plan-conversation-search-2026-04-25.md  plan-dashboard-chat-2026-04-28.md  plan-dashboard-chat-2026-05-03.md  plan-dashboard-frequency-heatmap-2026-04-29.md  plan-minimax-direct-2026-04-26.md  plan-openrouter-backend-2026-04-25.md  plan-slack-channel-2026-04-25.md  plan-voice-2026-05-04.md
docs/comparisons/: 2026-04-24-hermes-openclaw-cclaw-report.md
docs/landing/: CNAME  index.html
docs/skills/: BEST-PRICE.md  DAISO.md  DART.md  GCALENDAR.md  GMAIL.md  IMAGE.md  IMESSAGE.md  JIRA.md  KAKAO-LOCAL.md  NAVER-MAP.md  NAVER-SEARCH.md  QMD.md  REMINDERS.md  SUPABASE.md  TRANSLATE.md  TWITTER.md
src/abyss/: __init__.py  backup.py  bot_manager.py  chat_core.py  chat_server.py  claude_runner.py  cli.py  config.py  conversation_index.py  cron.py  dashboard_ui.py  group.py  handlers.py  heartbeat.py  onboarding.py  sdk_client.py  session.py  skill.py  token_compact.py  tool_metrics.py  utils.py
src/abyss/builtin_skills/: __init__.py
src/abyss/hooks/: log_tool_metrics.py  precompact_hook.py
src/abyss/llm/: __init__.py  openai_compat.py  openrouter.py
src/abyss/mcp_servers/: __init__.py  conversation_search.py
src/cclaw/: __init__.py  backup.py  bot_manager.py  claude_runner.py  cli.py  config.py  cron.py  group.py  handlers.py  heartbeat.py  onboarding.py  orchestrator.py  session.py  skill.py  token_compact.py  utils.py
src/cclaw/builtin_skills/: __init__.py
tests/: conftest.py  test_backup.py  test_builtin_skills.py  test_chat_core.py  test_chat_server.py  test_claude_runner.py  test_cli_group.py  test_cli_reindex.py  test_cli_surface.py  test_config.py  test_conversation_index.py  test_conversation_search_inject.py  test_conversation_search_mcp.py  test_cron.py  test_dashboard.py  test_dashboard_ui.py  test_group.py  test_handlers.py  test_handlers_group.py  test_heartbeat.py  test_integration_group.py  test_llm_base.py  test_llm_openai_compat.py  test_llm_openrouter.py  test_llm_registry.py  test_log_tool_metrics_hook.py  test_onboarding.py  test_orchestrator.py  test_precompact_hook.py  test_qmd.py  test_sdk_client.py  test_session.py  test_skill.py  test_skill_group.py  test_token_compact.py  test_tool_metrics.py  test_utils.py
tests/evaluation/: test_cron_parsing_quality.py  test_group_orchestrator_quality.py
(+100 files in other folders)
