[project]
name = "cclaw"
version = "2026.03.13"
description = "Telegram + Claude Code personal AI assistant"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=21.0",
    "typer>=0.12.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "croniter>=2.0",
    "pyzipper>=0.3.6",
]

[project.scripts]
cclaw = "cclaw.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cclaw"]
artifacts = ["src/cclaw/bridge_data/*"]

[tool.hatch.build.targets.wheel.force-include]
"clawhouse/src" = "cclaw/clawhouse_data/src"
"clawhouse/public" = "cclaw/clawhouse_data/public"
"clawhouse/package.json" = "cclaw/clawhouse_data/package.json"
"clawhouse/package-lock.json" = "cclaw/clawhouse_data/package-lock.json"
"clawhouse/tsconfig.json" = "cclaw/clawhouse_data/tsconfig.json"
"clawhouse/next.config.ts" = "cclaw/clawhouse_data/next.config.ts"
"clawhouse/postcss.config.mjs" = "cclaw/clawhouse_data/postcss.config.mjs"
"clawhouse/components.json" = "cclaw/clawhouse_data/components.json"
"clawhouse/eslint.config.mjs" = "cclaw/clawhouse_data/eslint.config.mjs"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
markers = ["evaluation: real Claude API calls for parsing quality evaluation"]
addopts = "--ignore=tests/evaluation"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
